# ZI_BT_TEST

./: .gitignore  CMakeLists.txt  README.md  ZI.cpp  ZI.hpp  bluetooth.cpp  bluetooth.hpp  btlib.c  btlib.h  devices.txt  log.cpp  log.hpp  wifiConfig.cpp  wifiConfig.hpp  zonedin-service.service
